done index and image

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-.index-google{
-    font-size: 90px;
-    font-family: sans-serif;
-}
-
 .index-all{
     text-align: center;
     margin-top: 150px;
@@ -10,10 +5,10 @@
 
 .text-field{
     width: 550px;
-    padding: 5px 40px;
+    padding: 10px 40px;
     margin: 30px 0;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 17px;
     border-radius: 20px;
     background-color: white;
     background-image: url('searchicon.png'); /* Downloaded from https://www.iconfinder.com/icons/309077/search_icon for free */
@@ -22,6 +17,11 @@
     background-repeat: no-repeat;
     border-style: none;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+.text-field:focus{
+    outline: 0;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .submit-btn{
@@ -33,9 +33,96 @@
 }
 
 .text-field:hover{
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .submit-btn:hover{
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+.index-menu{
+    text-align: right;
+    margin: 10px 10px;
+}
+
+.index-menu-individu{
+    text-align: right;
+    text-decoration: none;
+    color: #696969;
+    margin: 0px 10px;
+}
+
+.index-menu-individu:hover{
+    text-decoration: underline;
+}
+
+#googleimage-logo{
+    width: 20%;
+}
+
+#bluesearchicon{
+    width:1.2%;
+    position: absolute;
+    bottom: 40px;
+    left: 1000px;
+}
+
+.image-all{
+    position: relative;
+    text-align: center;
+    margin-top: 150px;
+}
+
+#advanced-logo{
+    float:left;
+    text-align: left;
+    width: 90px;
+}
+
+.advsearch-header{
+    margin: 40px 30px 0px 30px;
+    font-size: 23px;
+    color: #cc3700;
+    border-bottom: 1px solid #E8E8E8;
+    padding: 10px 10px 20px 10px;
+}
+
+.adv-text-field{
+    width: 550px;
+    padding: 5px 10px;
+    margin: 10px 0;
+    box-sizing: border-box;
+    font-size: 13px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+.adv-text-field:focus{
+    outline: 0;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.adv-all{
+    text-align: left;
+    margin: 30px 30px;
+}
+
+#find-pages-with{
+    font-size: 18px;
+}
+
+#all-these{
+    margin: 10px 80px;
+}
+
+#this-exact{
+    margin: 10px 16px;
+}
+
+#any-of-these{
+    margin: 10px 57px;
+}
+
+#none-of{
+    margin: 10px 50px;
 }
