--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
 }
 
 .text-field{
-    width: 550px;
+    width: 38%;
+    min-width: 240px;
     padding: 10px 40px;
     margin: 30px 0;
     box-sizing: border-box;
@@ -58,14 +59,19 @@
 }
 
 #googleimage-logo{
-    width: 20%;
+    width: 300px;
 }
 
 #bluesearchicon{
-    width:1.2%;
+    width:18px;
     position: absolute;
-    bottom: 40px;
-    left: 1000px;
+    bottom: 20%;
+    left: 66%;
+    max-width: 10%;
+}
+
+.img-all{
+    margin: 0px 10px;
 }
 
 .image-all{
@@ -73,6 +79,8 @@
     text-align: center;
     margin-top: 150px;
 }
+
+
 
 #advanced-logo{
     float:left;
